--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
