--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,21 +1,56 @@
 {
-  "name": "Aiqfome",
-  "short_name": "Aiqfome",
+  "name": "aiqfome - Delivery de comida direto no seu apê",
+  "short_name": "aiqfome",
+  "description": "Peça delivery de comida no aiqfome! Encontre restaurantes, lanchonetes, mercados e muito mais perto de você.",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
-  "theme_color": "#7b1fa2",
-  "background_color": "#7b1fa2",
-  "display": "standalone"
+  "start_url": "/",
+  "scope": "/",
+  "theme_color": "#6D2177",
+  "background_color": "#FFFFFF",
+  "display": "standalone",
+  "orientation": "portrait",
+  "categories": ["food", "delivery", "restaurants"],
+  "lang": "pt-BR",
+  "dir": "ltr",
+  "prefer_related_applications": true,
+  "related_applications": [
+    {
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.aiqfome",
+      "id": "com.aiqfome"
+    },
+    {
+      "platform": "itunes",
+      "url": "https://apps.apple.com/br/app/aiqfome/id1228315075"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Meus Pedidos",
+      "short_name": "Pedidos",
+      "description": "Veja seus pedidos recentes",
+      "url": "/pedidos",
+      "icons": [{ "src": "/web-app-manifest-192x192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Carrinho",
+      "short_name": "Carrinho",
+      "description": "Veja seu carrinho de compras",
+      "url": "/carrinho",
+      "icons": [{ "src": "/web-app-manifest-192x192.png", "sizes": "192x192" }]
+    }
+  ]
 }
