--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     }
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "tailwind-variants": "^1.0.0",
+    "zod": "^3.25.42",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
